Fixed navbar above scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -21,5 +21,4 @@ code {
 #root{
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
 }
